--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
           </div>
         </div>
         <!-- overlay --> 
-        </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/WIP.png" class="work-box"> <img src="images/WIP.png" alt="">
+      </a> </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/PGLDark/colorGame" class="work-box"> <img src="images/colorGame.png" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Still under development</h5>
-            <p>Still under development</p>
+            <h5>Color Game</h5>
+            <p>This is a personal project that I have done, it is a mini game about colours uses tkinter in python for the gui</p>
           </div>
         </div>
         <!-- overlay --> 
