--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/WIP.png" class="work-box"> <img src="images/WIP.png" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/PGLDark/sudokuSolver" class="work-box"> <img src="images/sudokuSolver.png" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Still under development</h5>
-            <p>Still under development</p>
+            <h5>Sudoku Solver</h5>
+            <p>This is a personal project that I have done, it is a sudoku solver. It utilizes pygame for its GUI and use backtracking to solve the game board</p>
           </div>
         </div>
         <!-- overlay --> 
