--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Point Of Sale</h5>
-            <p>This is a CSE116 Course Project, it utilizes OOP to create an interactive GUI</p>
+            <p>This is a CSE116 Course Project, it utilizes OOP to create an interactive GUI.</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -76,7 +76,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Game Enemy AI</h5>
-            <p>This is a CSE116 course project, it utilizes the Breadth-First Search algorithm to help the in game enemy AI find the shortest path to the closest player</p>
+            <p>This is a CSE116 course project, it utilizes the Breadth-First Search algorithm to help the in game enemy AI find the shortest path to the closest player.</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -85,7 +85,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>US Vacanation webpage</h5>
-            <p>This is a CSE115 course project, it utilizes JavaScript and Python to create an interactive webpage hosted on replits servers</p>
+            <p>This is a CSE115 course project, it utilizes JavaScript and Python to create an interactive webpage hosted on replits servers.</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -94,7 +94,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Color Game</h5>
-            <p>This is a personal project that I have done, it is a mini game about colours uses tkinter in python for the gui</p>
+            <p>This is a personal project that I have done, it is a mini game about colours uses tkinter in python for the gui.</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -103,16 +103,16 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Sudoku Solver</h5>
-            <p>This is a personal project that I have done, it is a sudoku solver. It utilizes pygame for its GUI and use backtracking to solve the game board</p>
+            <p>This is a personal project that I have done, through this project I learned the basics of pygame and how backtracking works. It utilizes pygame for its GUI and use backtracking to solve the game board.</p>
           </div>
         </div>
         <!-- overlay --> 
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/WIP.png" class="work-box"> <img src="images/WIP.png" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="https://github.com/PGLDark/weatherApp" class="work-box"> <img src="images/weatherApp.png" alt="">
         <div class="overlay">
           <div class="overlay-caption">
-            <h5>Still under development</h5>
-            <p>Still under development</p>
+            <h5>Weather App</h5>
+            <p>This is a personal project, I did it to learn about the use and implementation of API. This project uses openweathermaps API and unsplash for images.</p>
           </div>
         </div>
         <!-- overlay --> 
