--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 <section id="inner-description" class="section inner-description">
   <div class="container">
     <div class="col-md-10 col-md-offset-1 text-center">
-      <p>Please fill out the fourm bellow and I will contact you soon.</p>
+      <p>Please fill out the fourm bellow and I will contact you soon, or send an email directly to kenyu20031113@gmail.com thank you.</p>
       <!--contact form start-->
       <div class="col-md-6 col-md-offset-3 conForm">
         <div id="message"></div>
